js/js.translator/testData/incremental/invalidation/functionTypeInterfaceWithCrossModuleInliner/lib2/l2a.1.kt
fun getString(): String {
    val s: suspend (Any) -> Unit = { _ -> }
    return getTypeName(s)
}
